<resources>
    <string name="app_name">arcanedex_app</string>
    <string name="entrar">Entrar</string>
    <string name="palavra_passe">Palavra-passe</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">ArcaneDex</string>
    <string name="username">Nome de Utilizador</string>
    <string name="noAccount">Ainda não tens conta? Regista-te!</string>
    <string name="acceptPolicy">Aceitar política de privacidade</string>
    <string name="register">Registar</string>
    <string name="createAccount">Criar Conta</string>
    <string name="name">Nome</string>
    <string name="surname">Apelido</string>
    <string name="email">Email</string>
    <string name="alreadyHasAccount">Já tens conta? Inicia sessão!</string>
    <string name="male">Masculino</string>
    <string name="female">Feminino</string>
    <string name="privacyPolicy">
        A sua privacidade é importante para nós. Este documento descreve como recolhemos, utilizamos e protegemos as suas informações pessoais. Ao utilizar esta aplicação, está a aceitar os termos aqui descritos. Recolha de Dados:
        Recolhemos informações fornecidas voluntariamente, como nome, endereço de e-mail e outros detalhes necessários para criar e gerir a sua conta. Além disso, podemos recolher dados de utilização, como informações sobre como utiliza a aplicação.
        Utilização de Dados: As suas informações são utilizadas exclusivamente para melhorar a experiência de utilização, oferecer serviços personalizados e comunicar informações importantes. Os seus dados nunca serão vendidos ou partilhados com terceiros sem o seu consentimento explícito.
        Proteção de Dados: Implementamos medidas técnicas e organizacionais apropriadas para proteger as suas informações contra acesso não autorizado, alteração, divulgação ou destruição.
        Direitos do Utilizador: Tem o direito de aceder, corrigir ou eliminar os seus dados pessoais a qualquer momento. Para exercer esses direitos, entre em contacto connosco através dos canais indicados na aplicação.
        Ao aceitar esta política de privacidade, está a autorizar-nos a recolher e utilizar os seus dados nos termos acima descritos. Caso não concorde com algum dos pontos, por favor, não utilize esta aplicação.
        Esta política pode ser atualizada periodicamente. Recomendamos que reveja este documento regularmente para estar informado sobre quaisquer alterações.
    </string>
    <string name="carregar_mais">CARREGAR MAIS</string>
    <string name="descri_o_existente_do_arcane">Descrição existente do arcane</string>
    <string name="editar_dados">Editar Dados</string>
    <string name="privacy_policy">Política de privacidade</string>
    <string name="about_us">Sobre nós</string>
    <string name="sem_dados_para_mostrar">Sem dados para mostrar</string>
    <string name="No_Data">Sem dados</string>
    <string name="telmo">Telmo Gonçalves\nnº 22914</string>
    <string name="vasco">Vasco Brissos Alves\nnº 23193</string>
    <string name="disciplina">Disciplina: Desenvolvimento de Aplicações Móveis\nCurso: Licenciatura em Engenharia Informática 2024/2025</string>
    <string name="librariesUsed">Bibliotecas e Frameworks usados:\n• Retrofit\n• Glide\n• Auth0 JWT\n• ConstraintLayout\n• Material Design Components\n• AndroidX Libraries</string>
    <string name="close">Fechar</string>
    <string name="nome_do_arcane">Nome do Arcane</string>
    <string name="description">Descrição</string>
    <string name="image_preview">Image Preview</string>
    <string name="select_image">Selecionar Imagem</string>
    <string name="cancel">Cancelar</string>
    <string name="save">Guardar</string>
    <string name="searchCreatures">Pesquisar Criaturas</string>
    <string name="searchArcane">Pesquisar Arcane</string>
    <string name="totalCreatures">Total: 0 Criaturas</string>
    <string name="add">Adicionar</string>
    <string name="settings">Definições</string>
    <string name="editData">Editar Dados</string>
    <string name="exemplousername">ExemploUsername</string>
    <string name="guardar">Guardar</string>
    <string name="arrow_icon">Icon Seta</string>
    <string name="deleteAccount">Eliminar Conta</string>
    <string name="endSession">Terminar Sessão</string>
    <string name="arcaneName">Nome do Arcane</string>
    <string name="edit">Editar</string>
    <string name="card_image">Imagem Cartão</string>
    <string name="titleCard">Título</string>
    <string name="favorite_icon">Icon Favorito</string>
</resources>