<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".fragments.AdminFragment">

    <!-- Barra de pesquisa -->
    <android.widget.SearchView
        android:id="@+id/searchView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:queryHint="@string/searchCreatures"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Contador de criaturas -->
    <TextView
        android:id="@+id/totalCountTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/totalCreatures"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/searchView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- ProgressBar -->
    <ProgressBar
        android:id="@+id/loading_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/totalCountTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />


    <!-- ImageView for No Data -->
    <ImageView
        android:id="@+id/no_data_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/baseline_info_24"
        android:contentDescription="@string/sem_dados_para_mostrar"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/totalCountTextView"
        app:layout_constraintBottom_toTopOf="@id/loadMoreButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/primary" />

    <!-- No Data Text -->
    <TextView
        android:id="@+id/noDataText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/primary"
        android:textAlignment="center"
        android:text="@string/No_Data"
        app:layout_constraintVertical_bias="0.350"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/loadMoreButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/no_data_image">

    </TextView>

    <!-- RecyclerView para listar os Arcanes -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/arcanesRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/totalCountTextView"
        app:layout_constraintBottom_toTopOf="@id/addFloatingButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="8dp"
        tools:listitem="@layout/item_arcane" />

    <!-- Botão Flutuante para adicionar -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addFloatingButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:contentDescription="@string/add"
        android:src="@drawable/baseline_add_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/white"
        app:backgroundTint="@color/primary" />

    <Button
        android:id="@+id/loadMoreButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/carregar_mais"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/arcanesRecyclerView" />
</androidx.constraintlayout.widget.ConstraintLayout>
