<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.FavouritesFragment">

    <!-- SearchView -->
    <android.widget.SearchView
        android:id="@+id/search_bar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:queryHint="@string/searchArcane"
        android:iconifiedByDefault="false"
        android:background="?attr/selectableItemBackground"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- RecyclerView -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@id/search_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/loading_spinner"
        tools:listitem="@layout/item_card" />

    <!-- ProgressBar -->
    <ProgressBar
        android:id="@+id/loading_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/recyclerview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <!-- No Data Text -->

    <!-- ImageView for No Data -->
    <TextView
        android:id="@+id/noDataText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/No_Data"
        android:textAlignment="center"
        android:textColor="@color/primary"
        app:layout_constraintBottom_toTopOf="@id/load_more_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/no_data_image"
        app:layout_constraintVertical_bias="0.291"
        android:visibility="gone">

    </TextView>

    <ImageView
        android:id="@+id/no_data_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/baseline_info_24"
        android:contentDescription="@string/sem_dados_para_mostrar"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/search_bar"
        app:layout_constraintBottom_toTopOf="@id/load_more_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/primary" />

    <!-- Load More Button -->
    <Button
        android:id="@+id/load_more_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:visibility="gone"
        android:textColor="@color/white"
        android:text="@string/carregar_mais"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
